--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "description": "Ordspel, inlämning 1: Testade algoritmer",
   "main": "wordle.js",
   "scripts": {
-    "test": "jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0"
   }
 }
